Implemented sliding Card View for MainMapViewController

--- a/UCSC Meets/Info.plist
+++ b/UCSC Meets/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This is required for the app to work.</string>
 </dict>
 </plist>
